--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -5,6 +5,9 @@ on: [push]
 jobs:
   build:
     runs-on: [ubuntu-latest]
+    stragegy:
+      matrix:
+        dockerfile: ['python2', 'python3']
     steps:
       - uses: actions/checkout@v1
       - name: login
@@ -12,9 +15,11 @@ jobs:
           docker login docker.pkg.github.com -u github -p $TOKEN
         env:
           TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - run: docker build -t panda3d:latest .
-      - run: |
-          docker tag panda3d:latest docker.pkg.github.com/judge2020/panda3d/panda3d:${GITHUB_SHA:0:20}
-          docker tag panda3d:latest docker.pkg.github.com/judge2020/panda3d/panda3d:$(date +%s)
-          docker tag panda3d:latest docker.pkg.github.com/judge2020/panda3d/panda3d:latest
-      - run: docker push docker.pkg.github.com/judge2020/panda3d/panda3d
+      - run: docker build -t panda3d:latest -f $dockerfile.Dockerfile .
+      - name: tag and push
+        run: |
+          image=docker.pkg.github.com/judge2020/panda3d/panda3d-$dockerfile
+          docker tag panda3d:latest $image:${GITHUB_SHA:0:20}
+          docker tag panda3d:latest $image:$(date +%s)
+          docker tag panda3d:latest $image:latest
+          docker push $image
