--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -15,10 +15,10 @@ jobs:
           docker login docker.pkg.github.com -u github -p $TOKEN
         env:
           TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - run: docker build -t panda3d:latest -f $dockerfile.Dockerfile .
+      - run: docker build -t panda3d:latest -f ${{ matrix.dockerfile }}.Dockerfile .
       - name: tag and push
         run: |
-          image=docker.pkg.github.com/judge2020/panda3d/panda3d-$dockerfile
+          image=docker.pkg.github.com/judge2020/panda3d/panda3d-${{ matrix.dockerfile }}
           docker tag panda3d:latest $image:${GITHUB_SHA:0:20}
           docker tag panda3d:latest $image:$(date +%s)
           docker tag panda3d:latest $image:latest
