--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -8,7 +8,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        dockerfile: ['python2', 'python3']
+        dockerfile: ['python2', 'python3', 'upstream3']
     steps:
       - uses: actions/checkout@v1
       - name: login
@@ -16,7 +16,9 @@ jobs:
           docker login docker.pkg.github.com -u github -p $TOKEN
         env:
           TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - run: docker build -t panda3d:latest -f ${{ matrix.dockerfile }}.Dockerfile .
+      - run: |
+          git clone https://github.com/astron/panda3d astronpanda3d
+          docker build -t panda3d:latest -f ${{ matrix.dockerfile }}.Dockerfile .
       - name: tag and push
         run: |
           image=docker.pkg.github.com/judge2020/panda3d/panda3d-${{ matrix.dockerfile }}
